fix scrollbar

--- a/src/pages/popup/index.scss
+++ b/src/pages/popup/index.scss
@@ -7,6 +7,11 @@ body {
   position: relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+.root-node {
+  overflow-y: scroll;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
